--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,6 @@ tgcrypto
 youtube-search
 youtube-search-python
 git+https://github.com/yt-dlp/yt-dlp.git
+https://github.com/New-dev0/Telethon/archive/patch-8.zip
+python-decouple
+heroku3
